# mobile-language-mapping

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.py  vis_pca.py
configs/: 001_train_set_table.yml  002_train_prepare_groceries.yml  01_bc_pick_static.yml  02_bc_pick_uplift.yml  03_bc_pick_3dencoder.yml  04_bc_pick_image.yml  05_bc_pick_static_dino.yml  07_bc_pick_static_global.yml  08_bc_pick_static_global_delta.yml  10_bc_pick_global_multistep.yml  11_bc_pick_global_multistep_online.yml  12_bc_pick_global_multistep_online_gridnet.yml  12_bc_pick_global_multistep_pretrain_gridnet.yml  13_bc_pick_global_multistep_online_gridnet.yml  14_bc_pick_global_gridnet_multiepisode.yml  16_bc_pick_global_gridnet_multiepisode_policy_pretrained.yml  bc_pick.yml  bc_pick_flow.yml  bc_pick_static.yml  evaluate.yml  train_map_prepare_groceries.yml  train_map_set_table.yml  train_map_tidy_house.yml
docker/: Dockerfile  dynamic_job.yaml  job.yaml  pod.yaml  pvc.yaml
eval/: evaluate.py  evaluate_map.py
experiment/: 001_train_map_bc.py  001_train_set_table.py  002_train_prepare_groceries.py  eval_bc.py  train_bc.py  train_map_bc.py
experiment_script/: 001_train_set_table.sh  002_train_prepare_groceries.sh
lang_mapping/: __init__.py  agent_point.py  dataset.py  dino_module.py  mapping.py  module.py  policy.py  train_bc_point.py  utils.py
mshab/: evaluate.py  train_bc_point.py
python_script/: train_bc_point.py  train_bc_point_dynamic.py
script/: 001_train_set_table.sh  002_train_prepare_groceries.sh  003_train_tidy_house.sh
scripts/: 01_train_bc_point_static_pretrain.sh  02_train_bc_point_uplift.sh  03_train_bc_point_3dencoder.sh  04_train_bc_point_image.sh  05_train_bc_point_static_pretrain_dino.sh  06_train_bc_point_static_pretrain.sh  06_train_bc_point_static_pretrain_target.sh  07_train_bc_point_static_pretrain_global.sh  08_train_bc_point_static_pretrain_global_delta.sh  10_train_bc_point_global_multistep.sh  11_train_bc_point_global_multistep_online.sh  12_train_bc_point_global_multistep_online_gridnet.sh  14_train_bc_point_global_gridnet_multiepisode.sh  15_train_bc_point_global_gridnet_multiepisode_policy.sh  16_train_bc_point_global_gridnet_multiepisode_policy_pretrained.sh  17_train_bc_point_global_gridnet_multiepisode_dit.sh  (+8 more)
(+298 files in other folders)
